# datalint

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  application-diagram.drawio  conanfile.py  output.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
datalintlib/: CMakeLists.txt
datalintlib/include/datalint/: CsvFileParser.h  IFileParser.h  RawData.h  RawField.h  SourceLocation.h  StringUtils.h  datalint_namespace.h
datalintlib/include/datalint/ApplicationDescriptor/: ApplicationDescriptor.h  DefaultCsvApplicationDescriptorResolver.h  IApplicationDescriptorResolver.h  ResolveError.h  ResolveResult.h
datalintlib/include/datalint/Error/: ErrorCollector.h  ErrorLog.h  datalint_error_namespace.h
datalintlib/include/datalint/ErrorProcessor/: FileOutputErrorProcessor.h  IErrorProcessor.h
datalintlib/include/datalint/FieldParser/: CsvFieldParser.h  IFieldParser.h  ParsedData.h  ParsedDataBuilder.h  ParsedField.h  RawValue.h
datalintlib/include/datalint/FileParser/: CsvFileParser.h  IFileParser.h  datalint_input_namespace.h
datalintlib/include/datalint/LayoutSpecification/: ExpectedField.h  FieldOrderingConstraint.h  LayoutPatch.h  LayoutPatchOperations.h  LayoutSpecification.h  LayoutSpecificationBuilder.h  LayoutSpecificationValidator.h  UnexpectedFieldStrictness.h
datalintlib/include/datalint/RuleSpecification/: AddFieldRulePatchOperation.h  AllValuesSelector.h  FieldRule.h  IRulePatchOperation.h  IValueRule.h  IValueSelector.h  IntegerInRangeRule.h  RemoveFieldRulePatchOperation.h  RuleContext.h  RulePatch.h  RuleSpecification.h  RuleSpecificationBuilder.h  RuleValidator.h  ValueAtIndexSelector.h
datalintlib/include/datalint/Version/: Version.h  VersionRange.h
datalintlib/src/: CsvFileParser.cpp  RawData.cpp  StringUtils.cpp
datalintlib/src/ApplicationDescriptor/: DefaultCsvApplicationDescriptorResolver.cpp
datalintlib/src/ErrorProcessor/: FileOutputErrorProcessor.cpp
datalintlib/src/FieldParser/: CsvFieldParser.cpp  ParsedDataBuilder.cpp
datalintlib/src/FileParser/: CsvFileParser.cpp
datalintlib/src/LayoutSpecification/: LayoutSpecification.cpp  LayoutSpecificationBuilder.cpp  LayoutSpecificationValidator.cpp
datalintlib/src/RuleSpecification/: RuleValidator.cpp
datalinttool/: CMakeLists.txt
datalinttool/include/: ExampleApplicationDescriptorResolver.h
datalinttool/src/: ExampleApplicationDescriptorResolver.cpp  main.cpp
profiles/: macosx
resources/: csv-file.csv
scripts/: build.sh  package.sh  test.sh
tests/: CMakeLists.txt
tests/include/: TestUtils.h  datalint_test_namespace.h
tests/src/: CsvFileParserTests.cpp  DefaultCsvApplicationDescriptorResolverTests.cpp  RawDataTests.cpp  StringUtilsTests.cpp  reader_tests.cpp
tests/src/Error/: ErrorCollectorTests.cpp  ErrorLogTests.cpp
tests/src/ErrorProcessor/: FileOutputErrorProcessorTests.cpp
tests/src/FieldParser/: CsvFieldParserTests.cpp  ParsedDataBuilderTests.cpp
tests/src/LayoutSpecification/: ExpectedFieldTests.cpp  LayoutPatchOperationsTests.cpp  LayoutPatchTests.cpp  LayoutSpecificationBuilderTests.cpp  LayoutSpecificationTests.cpp  LayoutSpecificationValidatorTests.cpp
tests/src/RuleSpecification/: AddFieldPatchRuleOperationTests.cpp  AllValuesSelectorTests.cpp  FieldRuleTests.cpp  IntegerInRangeRuleTests.cpp  RemoveFieldPatchRuleOperationTests.cpp  RulePatchTests.cpp  RuleSpecificationBuilderTests.cpp  RuleSpecificationTests.cpp  RuleValidatorTests.cpp  ValueAtIndexSelectorTests.cpp
tests/src/Version/: VersionRangeTests.cpp  VersionTests.cpp
